      there is none present yet.
  * debian/control: Replace obsolete ${Source-Version} with ${binary:Version}.

  [ Till Kamppeter ]
  * Add debian/local/textonly.{ppd,filter}: Text-only printer driver from Red
    Hat. Install it in debian/rules.
  * debian/rules: Install the D-Bus config file so that CUPS reports
    job progress to dbus clients (like sytem-config-printer).

 -- Martin Pitt <mpitt@debian.org>  Mon, 06 Aug 2007 15:33:07 +0200

cupsys (1.2.12-1) unstable; urgency=low

  * New upstream release
  * removed unnecessary dependency against patch package (Closes: #431069)
  * Debconf translation
    - Danish (Closes: #426772)
    - Vietnamese (Closes: #426822)
    - Spanish (Closes: #430004)
  * Disabled external_pam_helper due to #425944 and Ubuntu#112803.
    (closes: #425944)

 -- Kenshi Muto <kmuto@debian.org>  Sat, 14 Jul 2007 14:56:24 +0900

cupsys (1.2.11-3) unstable; urgency=medium

  * debian/rules: Disable privilege dropping for now until we fixed the
    backend invocation to become compatible to upstream's behaviour again.
    This unbreaks third-party backends again for now. (Closes: #427559)

 -- Martin Pitt <mpitt@debian.org>  Fri, 08 Jun 2007 11:15:12 +0200

cupsys (1.2.11-2) unstable; urgency=low

  * debian/rules: Latest cups installs the ipp backend with 0700 permissions,
    which makes it inaccessible to both the cups daemon (Closes: #423972) and
    unreadable for users (Closes: #415872)

 -- Martin Pitt <mpitt@debian.org>  Wed, 16 May 2007 09:06:44 +0200

cupsys (1.2.11-1) unstable; urgency=low

  [ Kenshi Muto ]
  * Applied templates improvement patch contributed by
    debian-l10n-english team. (closes: #416350)
  * Debconf translation
    - Japanese
    - Galician (closes: #416357)
    - Swedish (closes: #416356)
    - Catalan (closes: #416367)
    - Basque (closes: #416385)
    - Norwegian (closes: #416401)
    - Italian (closes: #416407)
  * New upstream version 1.2.11:
    - 56_dirsvc patch is merged.
