@@ -1,0 +1,1 @@
+application/openofficeps application/postscript 33 oopstops
