@@ -56,8 +56,12 @@ cupsys (1.2.12-2) UNRELEASED; urgency=low
     Hat. Install it in debian/rules.
   * debian/rules: Install the D-Bus config file so that CUPS reports
     job progress to dbus clients (like sytem-config-printer).
+  * Add debian/local/oopstops.{.pl,types,convs}: Helge Bliscke's oopstops
+    filter to work around the bugs in the PostScript output of OpenOffice.org
+    (from http://www.srz.de/Members/bla/cups/filter/oopstops). Install them in
+    debian/rules.
 
- -- Martin Pitt <mpitt@debian.org>  Mon, 06 Aug 2007 15:33:07 +0200
+ -- Martin Pitt <mpitt@debian.org>  Mon, 06 Aug 2007 15:47:33 +0200
 
 cupsys (1.2.12-1) unstable; urgency=low
 
